fix: avoid shadow being clipped

--- a/inject/vscode-frosted-glass-theme.css
+++ b/inject/vscode-frosted-glass-theme.css
@@ -213,7 +213,8 @@
 
 /* Menu Dropdown Animation */
 .monaco-menu-container {
-  overflow: hidden;
+  overflow: clip !important;
+  overflow-clip-margin: 10px;
 }
 
 .monaco-menu-container > .monaco-scrollable-element {
